--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title>My Awesome Widget</title>
-    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -15,9 +14,9 @@
     window.weatherWidgetConfig =  window.weatherWidgetConfig || [];
     window.weatherWidgetConfig.push({
         selector:".weatherForecastWidget",
-        apiKey:"YOUR_API_KEY",
-        location:null,
-        unitGroup:"us"
+        apiKey:"6WKQUHRUXRDUNY8BSW6SHC6K2",
+        location:"London, UK",
+        unitGroup:"metric"
     });
     (function() {
         var d = document, s = d.createElement('script');
