--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="weatherForecastWidget"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
-<link rel="stylesheet" href="https://www.visualcrossing.com/widgets/forecast/weather-forecast-widget-d3.css">
+<link rel="stylesheet" href="weather-forecast-widget-d3.css">
 <script>
     window.weatherWidgetConfig =  window.weatherWidgetConfig || [];
     window.weatherWidgetConfig.push({
@@ -20,7 +20,7 @@
     });
     (function() {
         var d = document, s = d.createElement('script');
-        s.src = 'https://www.visualcrossing.com/widgets/forecast/weather-forecast-widget-d3.js';
+        s.src = 'weather-forecast-widget-d3.js';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
     })();
